Makes new lizard plushie controllable by ghost

--- a/Resources/Prototypes/Entities/Objects/Fun/toys.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/toys.yml
@@ -390,6 +390,7 @@
     name: ghost-role-information-possessed-lizard-plushie-name
     description: ghost-role-information-possessed-lizard-description
     rules: ghost-role-component-default-rules
+  - type: GhostTakeoverAvailable
 
 - type: entity
   parent: BasePlushie
