Added the possesssed lizard plushie to the grand lottery

--- a/Resources/Prototypes/Catalog/Fills/Crates/cargo.yml
+++ b/Resources/Prototypes/Catalog/Fills/Crates/cargo.yml
@@ -289,6 +289,8 @@
       orGroup: Plushies
     - id: PlushieLizard
       prob: 0.01
+    - id: PossessedPlushieLizard
+      prob: 0.01
       orGroup: Plushies
     - id: PlushieRouny
       prob: 0.01
