--- a/Resources/Prototypes/Catalog/Fills/Crates/fun.yml
+++ b/Resources/Prototypes/Catalog/Fills/Crates/fun.yml
@@ -59,16 +59,16 @@
   name: bulk lizard plushie crate
   description: A buncha soft lizard plushies. Throw them around and then wonder how you're gonna explain this purchase to NT.
   components:
-  - type: EntityTableContainerFill
-    containers:
-      entity_storage: !type:AllSelector
-        children:
-        - id: PlushieLizard
-          amount: !type:ConstantNumberSelector
-            value: 3
-        - id: PlushieSpaceLizard
-          amount: !type:ConstantNumberSelector
-            value: 3
+  - type: StorageFill
+    contents:
+      - id: PlushieLizard
+        amount: 3
+        prob: 1
+      - id: PlushieSpaceLizard
+        amount: 3
+        prob: 1
+      - id: PossessedPlushieLizard
+        prob: 0.1
 
 - type: entity
   id: CrateFunInstrumentsVariety
