Update attributions.yml to include new lobby art by Lion

--- a/Resources/Textures/LobbyScreens/attributions.yml
+++ b/Resources/Textures/LobbyScreens/attributions.yml
@@ -62,3 +62,8 @@
   license: "CC-BY-SA-4.0"
   copyright: "Carousel"
   source: "https://github.com/medabunny/imp-station-14/"
+
+- files: ["IMG_0138.webp"]
+  license: "CC-BY-SA-4.0"
+  copyright: "Lion"
+  source: "https://github.com/medabunny/imp-station-14/"
