--- a/Resources/Prototypes/Entities/Objects/Materials/materials.yml
+++ b/Resources/Prototypes/Entities/Objects/Materials/materials.yml
@@ -601,6 +601,83 @@
 
 - type: entity
   parent: MaterialBase
+  id: MaterialToothSpaceCarp
+  name: space carp tooth
+  description: Pretty small but plenty nasty. You like them best when they're not sinking into you.
+  suffix: Full
+  components:
+  - type: Sprite
+    sprite: Objects/Materials/Mob/carptooth.rsi
+    layers:
+    - state: tooth
+      map: [ "base" ]
+  - type: Item
+    sprite: Objects/Materials/Mob/carptooth.rsi
+    size: Normal
+  - type: Appearance
+  - type: Stack
+    stackType: SpaceCarpTooth
+    count: 30
+    baseLayer: base
+    layerStates:
+    - tooth
+    - tooth_2
+    - tooth_3
+  - type: StackPrice
+    price: 50
+  - type: Tag
+    tags:
+    - ToothSpaceCarp
+
+- type: entity
+  parent: MaterialToothSpaceCarp
+  id: MaterialToothSpaceCarp1
+  suffix: 1
+  components:
+  - type: Stack
+    count: 1
+
+- type: entity
+  parent: [ MaterialBase, BaseKnife ]
+  id: MaterialToothSharkminnow
+  name: sharkminnow tooth
+  description: Looks sharp. Sharp enough to poke someone's eye out. Holy fuck it's big.
+  suffix: Full
+  components:
+  - type: Sprite
+    sprite: Objects/Materials/Mob/sharktooth.rsi
+    layers:
+    - state: tooth
+      map: [ "base" ]
+  - type: Item
+    sprite: Objects/Materials/Mob/sharktooth.rsi
+    size: Normal
+  - type: Appearance
+  - type: Stack
+    stackType: SharkMinnowTooth
+    count: 30
+    baseLayer: base
+    layerStates:
+    - tooth
+    - tooth_2
+    - tooth_3
+  - type: StackPrice
+    price: 150
+  - type: Tag
+    tags:
+    - Knife
+    - ToothSharkminnow
+
+- type: entity
+  parent: MaterialToothSharkminnow
+  id: MaterialToothSharkminnow1
+  suffix: 1
+  components:
+  - type: Stack
+    count: 1
+
+- type: entity
+  parent: MaterialBase
   id: MaterialBones
   name: bones
   suffix: Full
