--- a/Resources/Prototypes/tags.yml
+++ b/Resources/Prototypes/tags.yml
@@ -1264,6 +1264,12 @@
   id: Toolbox
 
 - type: Tag
+  id: ToothSharkminnow
+
+- type: Tag
+  id: ToothSpaceCarp
+
+- type: Tag
   id: Torch
 
 - type: Tag
