--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -383,6 +383,10 @@ SignHydro3: SignHydro1
 # 2024-07-27
 LogicGate: LogicGateOr
 
+# 2024-08-08
+MaterialReclaimer: null
+MaterialReclaimerMachineCircuitboard: null
+
 # 2024-08-11
 FoodTacoBeef: FoodTacoShell
 FoodTacoChicken: FoodTacoShell
