--- a/Resources/Prototypes/Entities/Mobs/Cyborgs/borg_chassis.yml
+++ b/Resources/Prototypes/Entities/Mobs/Cyborgs/borg_chassis.yml
@@ -265,10 +265,12 @@
     access: [["Medical"], ["Command"], ["Research"]]
   - type: Inventory
     templateId: borgDutch
-  - type: SolutionScanner
-  - type: FootstepModifier
-    footstepSoundCollection:
+  - type: MovementSound
+    sound:
       collection: FootstepHoverBorg
+      params:
+        loop: true
+  - type: SolutionScanner
   - type: InteractionPopup
     interactSuccessString: petting-success-medical-cyborg
     interactFailureString: petting-failure-medical-cyborg
