--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/mining.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/mining.yml
@@ -132,6 +132,7 @@
     count: 1
   - type: MeleeWeapon
     wideAnimationRotation: -135
+    attackRate: 1.5
     damage:
       types:
         Blunt: 7
