--- a/Resources/Prototypes/Loadouts/Jobs/Civilian/clown.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Civilian/clown.yml
@@ -11,6 +11,11 @@
     jumpsuit: ClothingUniformJumpsuitClown
 
 - type: loadout
+  id: ClownSkirt
+  equipment:
+    jumpsuit: ClothingUniformJumpskirtClown
+
+- type: loadout
   id: JesterSuit
   equipment:
     jumpsuit: ClothingUniformJumpsuitJesterAlt
