--- a/Resources/Prototypes/Entities/Structures/Storage/filing_cabinets.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/filing_cabinets.yml
@@ -1,11 +1,13 @@
 - type: entity
-  parent: BaseStructureDynamic
+  parent: [ BaseStructureDynamic, BaseBagOpenClose ]
   id: BaseFilingCabinet
   description: A cabinet for all your filing needs.
   suffix: Empty
   abstract: true
   components:
   - type: Storage
+    grid:
+    - 0,0,9,3
     maxItemSize: Normal
     whitelist:
       tags:
@@ -22,6 +24,17 @@
         type: StorageBoundUserInterface
   - type: Transform
     noRot: true
+  - type: Fixtures
+    fixtures:
+      fix1:
+        shape:
+          !type:PhysShapeAabb
+          bounds: "-0.18,-0.48,0.18,0.48"
+        density: 200
+        mask:
+        - MachineMask
+        layer:
+        - MachineLayer
   - type: InteractionOutline
   - type: ContainerContainer
     containers:
@@ -46,35 +59,23 @@
             min: 1
             max: 2
   - type: StaticPrice
-    price: 20
+    price: 80
+  - type: Construction
+    graph: FilingCabinet
 
 - type: entity
   name: filing cabinet
-  parent: [ BaseFilingCabinet, BaseBagOpenClose ]
+  parent: BaseFilingCabinet
   id: FilingCabinet
   components:
   - type: Storage
-    grid:
-    - 0,0,9,3
   - type: Sprite
     state: filingcabinet
     layers:
     - state: filingcabinet
     - state: filingcabinet-open
       map: ["openLayer"]
-  - type: Fixtures
-    fixtures:
-      fix1:
-        shape:
-          !type:PhysShapeAabb
-          bounds: "-0.18,-0.48,0.18,0.48"
-        density: 200
-        mask:
-        - MachineMask
-        layer:
-        - MachineLayer
   - type: Construction
-    graph: FilingCabinet
     node: filingCabinet
 
 - type: entity
@@ -118,7 +119,6 @@
         layer:
         - MachineLayer
   - type: Construction
-    graph: FilingCabinet
     node: chestDrawer
   - type: RequireProjectileTarget
 
