--- a/Resources/Prototypes/Entities/Structures/Storage/filing_cabinets.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/filing_cabinets.yml
@@ -66,7 +66,7 @@
 - type: entity
   name: filing cabinet
   parent: BaseFilingCabinet
-  id: FilingCabinet
+  id: filingCabinet
   components:
   - type: Storage
   - type: Sprite
@@ -81,7 +81,7 @@
 - type: entity
   name: tall cabinet
   parent: FilingCabinet
-  id: FilingCabinetTall
+  id: filingCabinetTall
   components:
   - type: Sprite
     state: tallcabinet
@@ -95,7 +95,7 @@
 - type: entity
   name: chest drawer
   parent: BaseFilingCabinet
-  id: FilingCabinetDrawer
+  id: filingCabinetDrawer
   description: A small drawer for all your filing needs, Now with wheels!
   components:
   - type: Storage
