--- a/Resources/Prototypes/Entities/Clothing/Head/hats.yml
+++ b/Resources/Prototypes/Entities/Clothing/Head/hats.yml
@@ -877,10 +877,10 @@
     - ClothMade
     - WhitelistChameleon
     - HamsterWearable
-  - type: SentienceTarget
-    flavorKind: station-event-random-sentience-flavor-inanimate
-    weight: 0.0002 # 5,000 times less likely than 1 regular animal
-  - type: BlockMovement
+#  - type: SentienceTarget # GreyStation - Random sentience should be to most things that are alive.
+#    flavorKind: station-event-random-sentience-flavor-inanimate
+#    weight: 0.0002 # 5,000 times less likely than 1 regular animal
+#  - type: BlockMovement
 
 - type: entity
   parent: ClothingHeadBase
