--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/sword.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/sword.yml
@@ -40,10 +40,10 @@
     tags:
     - CaptainSabre
   - type: DisarmMalus
-  - type: SentienceTarget
-    flavorKind: station-event-random-sentience-flavor-inanimate
-    weight: 0.0002 # 5,000 times less likely than 1 regular animal
-  - type: PirateAccent
+#  - type: SentienceTarget # GreyStation - Random sentience should be to most things that are alive.
+#    flavorKind: station-event-random-sentience-flavor-inanimate
+#    weight: 0.0002 # 5,000 times less likely than 1 regular animal
+#  - type: PirateAccent
     # not putting a BlockMovement component here cause that's funny.
 
 - type: entity
