why we still here

--- a/Resources/Prototypes/Catalog/Fills/Backpacks/duffelbag.yml
+++ b/Resources/Prototypes/Catalog/Fills/Backpacks/duffelbag.yml
@@ -357,26 +357,33 @@
   name: propaganda bundle
   description: Contains posters, clothing, flags and figures with syndicate thematics
   components:
-  - type: StorageFill
-    contents:
-      - id: FoldedPosterContrabandFreeSyndicateEncryptionKey
-      - id: FoldedPosterContrabandCybersun600
-      - id: FoldedPosterContrabandSyndicatePistol
-      - id: FoldedPosterContrabandEnergySwords
-      - id: FoldedPosterContrabandEnlistGorlex
-      - id: FoldedPosterContrabandSyndicateRecruitment
-      - id: FoldedPosterContrabandInterdyne
-      - id: FoldedPosterContrabandC20r
-      - id: FoldedPosterContrabandMoth
-      - id: SyndieHandyFlag
-        amount: 2
-      - id: ClothingUniformJumpsuitRecruitSyndie
-        amount: 2
-      - id: ClothingMaskNeckGaiter
-        amount: 2
-      - id: ClothingHeadHatSyndie
-        amount: 2
-      - id: Lighter
-        amount: 2
-      - id: ToyFigurineNukieCommander
-      - id: ToyFigurineFootsoldier
+  - type: EntityTableContainerFill
+    containers:
+      storagebase: !type:AllSelector
+        children:
+        - id: FoldedPosterContrabandFreeSyndicateEncryptionKey
+        - id: FoldedPosterContrabandCybersun600
+        - id: FoldedPosterContrabandSyndicatePistol
+        - id: FoldedPosterContrabandEnergySwords
+        - id: FoldedPosterContrabandEnlistGorlex
+        - id: FoldedPosterContrabandSyndicateRecruitment
+        - id: FoldedPosterContrabandInterdyne
+        - id: FoldedPosterContrabandC20r
+        - id: FoldedPosterContrabandMoth
+        - id: ToyFigurineNukieCommander
+        - id: ToyFigurineFootsoldier
+        - id: SyndieHandyFlag
+          amount: !type:ConstantNumberSelector
+            value: 2
+        - id: ClothingUniformJumpsuitRecruitSyndie
+          amount: !type:ConstantNumberSelector
+            value: 2
+        - id: ClothingMaskNeckGaiter
+          amount: !type:ConstantNumberSelector
+            value: 2
+        - id: ClothingHeadHatSyndie
+          amount: !type:ConstantNumberSelector
+            value: 2
+        - id: FlippoLighter
+          amount: !type:ConstantNumberSelector
+            value: 2
